@@ -6761,3 +6761,658 @@ public Map<Boolean, List<Integer>> partitionPrimesWithCustomCollector(int n) {
   * 결과
     * C 클래스에서 A와 B 메서드를 구분할 수 없기 때문에 컴파일 에러 발생
 ---
+
+## chapter 14 - 자바 모듈 시스템
+* 자바 9에서 가장 많이 거론되는 새로운 기능은 모듈 시스템
+* 직소 프로젝트 내부에서 개발된 기능
+
+### 압력 : 소프트웨어 유추
+* 궁극적으로 소프트웨어 아키텍처, 즉 고수준에서는 기반 코드를 바꿔야 할 때 유추하기 쉬우므로 생산성을 높일 수 있는 소프트웨어 프로젝트가 필요함
+* 추론하기 쉬운 소프트웨어를 만드는데 도움을 주는 관심사분리(separation of concerns)와 정보 은닉(information hiding)
+
+* 관심사 분리
+  * 관심사분리(SoC - Separation Of Concerns)는 컴퓨터 프로그램을 고유의 기능으로 나누는 동작을 권장하는 원칙
+  * 다양한 형식으로 구성된 지출을 파싱, 분석한 다음 결과를 고객에게 요약 보고하는 회계 앱을 개발한다고 가정
+    * SoC를 적용함으로 파싱, 분석, 레포트 기능을 모듈이라는 각각의 부분, 즉 서로 거의 겹치지 않는 코드 그룹으로 분리할 수 있음
+    * 클래스를 그룹화한 모듈을 이용해 앱의 클래스 간의 관계를 시각적으로 보여줄 수 있음
+  * 자바 패키지가 클래스를 그룹으로 만들기는 하지만, 자바 9 모듈은 클래스가 어떤 다른 클래스를 볼 수 있는지를 컴파일 시간에 정교하게 제어할 수 있음
+    * 특히 자바 패키지는 모듈성을 지원하지 않음
+  * SoC 원칙은 모델, 뷰, 컨트롤러 같은 아키텍처 관점 그리고 복구 기법을 비즈니스 로직과 분리하는 등 하위 수준 접근 등 상황에 유용함
+    * SoC 원칙 장점
+      * 개별 기능을 따로 작업할 수 있으므로 팀이 쉽게 협업 가능함
+      * 개별 부분을 재사용하기 쉬움
+      * 전체 시스템을 쉽게 유지보수할 수 있음
+
+* 정보 은닉
+  * 정보 은닉(information hiding)은 세부 구현을 숨기도록 장려하는 원칙
+  * 소프트웨어를 개발할 때 요구사항은 자주 바뀜
+    * 세부 구현을 숨김으로 프로그램의 어떤 부분을 바꿨을 때 다른 부분까지 영향을 미칠 가능성을 줄일 수 있음
+    * 즉 코드를 관리하고 보호하는 데 유용한 원칙
+  * 캡슐화(encapsulation)
+    * 캡슐화는 특정 코드 조각이 앱의 다른 부분과 고립되어 있음을 의미함
+    * 캡슐화된 코드는 내부적인 변화가 의도치 않게 외부에 영향을 미칠 가능성이 줄어듦
+    * 자바에서는 클래스 내의 컴포넌트에 적절하게 private 키워드를 사용했는지를 기준으로 컴파일러를 이용해 캡슐화를 확인할 수 있음
+    * 하지만 자바 9 이전까지는 클래스와 패키지가 의도된 대로 공개되었는지를 컴파일러로 확인할 수 있는 기능이 없었음
+
+* 자바 소프트웨어
+  * 잘 설계된 소프트웨어를 만들려면 이 두 가지 원칙을 따르는 것이 필수
+  * 자바는 객체 지향 언어로 클래스, 인터페이스를 이용함
+    * 특정 문제와 관련된 패키지, 클래스, 인터페이스를, 그룹으로 만들어 코드를 그룹화할 수 있음
+    * 코드 자체를 보고 소프트웨어의 동작을 추론하긴 현실적으로 어려움
+    * 따라서 UML 다이어그램 같은 도구를 이용하면 그룹 코드 간의 의존성을 시각적으로 볼 수 있어 소프트웨어를 추론하는데 도움이 됨
+  * 자바에서는 public, protected, private 등의 접근 제한자와 패키지 수준 접근 권한 등을 이용해 메서드, 필드 클래스의 접근을 제어함
+    * 하지만 이런 방식으로는 원하는 접근 제한을 달성하기 어려움
+    * 심지어 최종 사용자에게 원하지 않는 메서드도 공개해야 하는 상황 발생
+    * 초창기에는 앱과 의존성 체인이 상대적으로 작아 큰 문제가 아니었음
+    * 하지만 요즘에는 자바 앱이 커지면서 문제가 부각되고 있음
+    * 개인적으로 사용할 용도라도 클래스에 public 필드가 있다면 다른 사용자는 당연히 사용할 수 있다고 생각함
+
+### 자바 모듈 시스템을 설계한 이유
+* 모듈화의 한계
+  * 자바 9 이전까지는 모듈화된 소프트웨어 프로젝트를 만드는 데 한계가 있었음
+  * 자바는 클래스, 패키지, JAR 세 가지 수준의 코드 그룹화를 제공함
+  * 클래스와 관련해 자바는 접근 제한자와 캡슐화를 지원했음
+  * 하지만 패키지와 JAR 수준에서는 캡슐화를 거의 지원하지 않았음
+
+* 제한된 가시성 제어
+  * 자바는 정보를 감출 수 있는 접근자를 제공함
+    * public, protected, default(package private), private 네 가지 가시성 접근자
+  * 패키지의 가시성 제어 기능은 유명무실 수준
+    * 한 패키지 클래스와 인터페이스를 다른 패키지로 공개하려면 public으로 이들을 선언해야 함
+      * 결과적으로 모두에게 공개됨
+      * 특히 기본구현을 제공하는 의미로 'impl'이라는 문자열을 가진 패키지에서 이런 문제가 두드러짐
+      * 이런 상황에서 보통 패키지 내부의 접근자가 public이므로 사용자가 이 내부 구현을 마음대로 사용 가능
+      * 내부적으로 사용할 목적으로 만든 구현을 다른 프로그래머가 임시적으로 사용해서 정착해버릴 수 있음
+      * 결국 기존의 앱을 망가뜨리지 않고 라이브러리 코드를 바꾸기 어려워짐
+      * 보안 측면에서 볼 때 코드가 노출되었으므로 코드를 임의로 조작하는 위협에 더 많이 노출될 수 있음
+
+* 클래스 경로
+  * class path는 자바 문서에서 가져옴
+    * classpath라는 용어는 프로그램 인수와 관련해 사용하는 용어
+  * 자바는 앱을 번들하고 실행하는 기능과 관련해 태생적 약점을 갖고 있음
+    * 클래스를 모두 컴파일한 다음 보통 한 개의 평범한 JAR 파일에 넣고 클래스 경로에 이 JAR 파일을 추가해 사용할 수 있음
+    * 그러면 JVM이 동적으로 클래스 경로에 정의된 클래스를 필요할 때 읽음
+  * 클래스 경로와 JAR 조합 약점
+    * 첫째, 클래스 경로에는 같은 클래스를 구분하는 버전 개념이 없음
+      * 예를 들어 파싱 라이브러리 JSONParser 클래스를 지정할 때 버전 1.0을 사용하는지 2.0을 사용하는지 지정할 수 없음
+        * 클래스 경로에 두 가지 버전의 같은 라이브러리가 존재할 때 어떤 일이 발생할지 예측할 수 없음
+        * 다양한 컴포넌트가 같은 라이브러리의 다른 버전을 사용하는 상황이 발생할 수 있는 큰 앱에서 이런 문제가 두드러짐
+    * 둘째, 클래스 경로는 명시적인 의존성을 지원하지 않음
+      * 각각의 JAR 안에 있는 모든 클래스는 classes라는 한 주머니로 합쳐짐
+        * 즉 한 JAR가 다른 JAR에 포함된 클래스 집합을 사용하라고 명시적으로 의존성을 정의하는 기능을 제공하지 않음
+        * 클래스 경로 때문에 어떤 일이 일어나는지 파악하기 어려움
+          * 빠진 게 있는가?
+          * 충돌이 있는가?
+      * 메이븐, 그레이들 같은 빌드 도구는 이런 문제 해결에 도움을 줌
+      * 하지만 자바 9 이전에는 자바, JVM 누구도 명시적인 의존성을 지원하지 않았음
+        * 이러한 문제를 JAR 지옥, 클래스 경로 지옥이라 부르기도 함
+        * 결국 JVM이 ClassNotFoundException 같은 에러를 발생시키지 않고 앱을 정상적으로 실행할 때까지  
+          클래스 경로에 클래스 파일을 더하거나 클래스 경로에서 클래스를 제거해보는 수밖에 없음
+        * 자바 9 모듈 시스템을 이용하면 컴파일 타임에 이런 종류 에러를 모두 검출할 수 있음
+      * 캡슐화, 클래스 경로 지옥 문제가 우리 소프트웨어에만 발생하는 것이 아님
+
+* 거대한 JDK
+  * 자바 개발 키트(JDK)는 자바 프로그램을 만들고 실행하는 데 도움을 주는 두구의 집합
+    * 자바 프로그램을 컴파일하는 javac
+    * 자바 앱을 로드하고 실행하는 java
+    * 입출력을 포함해 런타임을 지원을 제공하는 JDK 라이브러리, 컬렉션, 스트림
+  * 초기 JDK 버전은 1996년 발표
+    * 많은 기술이 추가되었다가 사장됨 (예를 들어 CORBA)
+  * 자바 8에서는 컴팩트 프로파일(compact profiles) 기법 제시
+    * 관련 분야에 따라 JDK 라이브러리가 세 가지 프로파일로 나뉘어 각각 다른 메모리 풋프린트를 제공함
+    * 하지만 컴팩트 프로파일은 땜질식 처방일 뿐
+    * JDK 라이브러리의 많은 내부 API는 공개되지 않아야 함
+      * 안타깝게도 자바 언어의 낮은 캡슐화 지원 때문에 내부 API가 외부에 공개됨
+        * 예를 들어 스프링, 네티, 모키토 등 여러 곳에서 sun.misc.Unsafe라는 클래스를 사용했음
+          * 이 클래스는 JDK 내부에서만 사용하도록 만든 클래스
+          * 결과적으로 호환성을 깨지 않고는 관련 API를 바꾸기 어려운 상황
+  * JDK에서 필요한 부분만 골라 사용하고, 클래스 경로를 쉽게 유추할 수 있으며 플랫폼을 진화시킬 수 있는 강력한 캡슐화를 제공할 새로운 건축 구조가 필요함
+
+* OSGi와 비교
+  * Open Service Gateway initiative
+  * 자바에는 이미 OSGi라는 강력한 모듈 시스템이 존재했음
+    * 자바 플랫폼의 공식 기능은 아니었음
+    * 2000년에 시작해 자바 9 등장 전까지 JVM에서 모듈화 앱을 구현하는 사실상 표준으로 자리잡음
+  * 실제 OSGi와 새로운 자바 9 모듈 시스템은 상호 배타적인 관계가 아님
+    * 즉 한 앱에서 두 기법이 공존할 수 있음
+    * 실제 이 두 기능은 부분적으로만 중복됨
+    * OSGi는 훨씬 더 광범위한 영역을 가지며 직소에서 제공하지 않는 여러 기능을 제공함
+      * 번들(bundles)이라 불리는 OSGi 모듈은 특정 OSGi 프레임워크 내에서만 실행됨
+      * 대표적인(인증받은) OSGi 프레임워크
+        * 아파치 펠릭스(Apache Felix)
+        * 에퀴녹스(Equinox)
+          * 이클립스를 구동하는 데도 사용됨
+      * OSGi 프레임워크 내에서 앱을 실행할 때 재부팅하지 않고도 원격으로 개별 번들을 설치, 시작, 중지, 갱신, 제거할 수 있음
+        * 명확한 생명주기를 정의(OSGi의 번들 상태)
+          * INSTALLED
+            * 번들이 성공적으로 설치됨
+          * RESOLVED
+            * 번들에 필요한 모든 자바 클래스를 찾음
+          * STARTING
+            * 번들이 시작되면서 BundleActivator.start라는 메서드가 호출되었지만, 아직 start 메서드가 반환되지는 않음
+          * ACTIVE
+            * 번들이 성공적으로 활성화되고 실행됨
+          * STOPPING
+            * 번들이 정지되는 중. BundleActivator.stop 메서드가 호출되었지만 아직 stop 메서드가 반환되지는 않음
+          * UNINSTALLED
+            * 번들의 설치가 제거됨. 다른 상태로 이동할 수 없음
+  * 시스템을 재시작하지 않고도 앱의 다른 하위 부분을 핫스왑할 수 있다는 점이 직소와는 다른 OSGi만의 강점
+  * 번들 동작에 필요한 외부 패키지가 무엇이며 어떤 내부 패키지가 외부로 노출되어 다른 번들로 제공되는지를 서술하는 텍스트 파일로 각 번들을 정의함
+  * 동시에 프레임워크 내에 같은 번들의 다른 버전을 설치할 수 있다는 것도 장점
+  * OSGi의 각 번들이 자체적은 클래스 로더를 갖는 반면, 자바 9 모듈 시스템의 직소는 앱당 한 개의 클래스를 사용하므로 버전 제어를 지원하지 않음
+
+### 자바 모듈 : 큰 그림
+* 자바 8은 모듈이라는 새로운 자바 프로그램 구조 단위를 제공함
+  * 모듈은 module이라는 새 키워드에 이름과 바디를 추가해서 정의함
+    * 기술적으로 module, requires, export 같은 자바 9의 모듈 관련 용어는 제한된 키워드(restricted keyword)
+      * 따라서 하위 버전 호환성을 이유로 이들 식별자를 프로그램의 원하는 곳에 자유롭게 사용할 수 있지만  
+        모듈이 허용된 곳에서는 이들 용어가 키워드로 해석됨
+  * 모듈 디스크립터(module descriptor)는 module-info.java라는 특별한 파일에 저장됨
+    * 엄밀하게는 텍스트 형식을 모듈 선언(module declaration)이라고 함
+    * module-info.class에 저장된 바이너리 형식을 모듈 디스크립터라고 함
+  * 모듈 디스크립터는 보통 패키지와 같은 폴더에 위치
+     * 한 개 이상의 패키지를 서술하고 캡슐화 할수 있지만 단순한 상황에서는 이들 패키지중 한 개만 외부로 노출 시킴
+  * 직소 퍼즐에 비유
+    * exports는 돌출부
+    * requires는 패인 부분으로 생각할 수 있음
+
+### 자바 모듈 시스템으로 애플리케이션 개발하기
+* 애플리케이션 셋업
+  * 비용 관리를 해줄 앱을 구현한다고 가정
+    * 다음과 같은 여러 작업 처리
+      * 파일이나 URL에서 비용 목록을 읽음
+      * 비용의 문자열 표현을 파싱함
+      * 통계를 계산함
+      * 유용한 요약 정보를 표시함
+      * 각 태스크의 시작, 마무리 지점을 제공함
+    * 앱의 개념을 모델링할 여러 클래스와 인터페이스를 정의해야 함
+      * 먼저 Reader 인터페이스는 소스에서 얻어온 직렬화된 지출을 읽는 역할
+        * 소스가 어디냐에 따라 HttpReader, FileReader 등 여러 구현을 제공해야 함
+      * 또한 JSON 객체를 자바 앱에서 사용할 수 있는 도메인 객체 Expense로 재구성할 Parser 인터페이스도 필요
+      * 마지막으로 Expense 객체 목록으로 통계를 계산하고 SummaryStatistics 객체를 반환하는 SummaryCalculator 클래스 필요
+    * 모듈화 방법
+      * 분리할 수 있는 여러 기능(관심사)
+        * 다양한 소스에서 데이터를 읽음
+          * Reader, HttpReader, FileReader
+        * 다양한 포맷으로 구성된 테이블 파싱
+          * Parser, JSONParser, ExpenseJSON-Parser
+        * 도메인 객체를 구체화
+          * Expense
+        * 통계를 계산하고 반환
+          * SummaryCalculator, SummaryStatistics
+        * 다양한 기능을 분리 조정
+          * ExpenseApplication
+    * 각 기능을 그룹화 (교수법에 따라 아주 세부적으로 문제를 나누는 접근 방법 이용)
+      * expenses.readers
+      * expenses.readers.http
+      * expenses.readers.file
+      * expenses.parsers
+      * expenses.parsers.json
+      * expenses.model
+      * expenses.statistics
+      * expenses.application
+  * 이 간단한 앱에서는 모듈 시스템의 여러 부분이 두드러질 수 있도록 잘게 분해
+    * 단순한 프로젝트를 잘게 분해해 기능까지 캡슐화한다면 장점에 비해 초기 비용이 높아지는 등 옳은 결정인가 논란이 생길 수 있음
+    * 하지만 프로젝트가 커지면서 많은 내부 구현이 추가되면 이때부터 캡슐화와 추론의 장점이 두드러짐
+    * 위에서 나열한 목록을 앱 경계에 의존하는 패키지 목록으로 생각할 수 있음
+    * 아마 각 모듈은 다른 모듈로 노출하고 싶지 않는 내부 구현을 포함할 것
+    * 예를 들어 expenses.statistics 모듈은 실험적인 통계 방법을 다른 방법으로 구현한 여러 패키지를 포함할 수 있음
+    * 이들 패키지에서 어떤 것을 사용자에게 릴리스할지는 나중에 결졍할 수 있음
+
+* 세부적인 모듈화와 거친 모듈화
+  * 시스템을 모듈화할 때 모듈 크기를 결정해야 함
+    * 세부적인 모듈화 기법 대부분은 모든 패키지가 자신의 모듈을 가짐
+      * 이득에 비해 설계 비용이 증가함
+    * 거친 모듈화 기법은 한 모듈이 시스템의 모든 패키지를 포함함
+      * 모듈화의 모든 장점을 잃음
+  * 주기적으로 확인하는 프로세스를 가짐
+    * 가장 좋은 방법은 시스템을 실용적으로 분해하면서 진화하는 소프트웨어 프로젝트가 이해하기 쉽고 고치기 쉬운 수준으로 적절하게 모듈화되어 있는지를 확인
+  * 요약하면 모듈화는 소프트웨어 부식의 적
+
+* 자바 모듈 시스템 기초
+  * 메인 앱을 지원하는 한 개의 모듈만 갖는 기본적인 모듈화 앱부터 시작
+    * 디렉터리 안에 중첩된 프로젝트 디렉터리 구조
+      * |-- expenses.application
+        * |-- module-info.java
+          * |-- com
+            * |-- example
+              * |-- expenses
+                * |-- application
+                  * |-- ExpensesApplication.java
+  * module-info.java
+    * 모듈 디스크립터
+    * 모듈의 소스코드 파일 루트에 위치해야 함
+    * 모듈의 의존성과 어떤 기능을 외부로 노출할지를 정의함
+    * 지출 앱 예제에서는 아직 다른 모듈에 의존하거나 외부로 노출하는 기능이 없으므로 최상의 수준의 module-info.java 파일에 이름만 정의 되어 있음
+      * 내용은 비어있음
+    * 내용
+      ```
+      module expenses.application {
+      }
+      ```
+  * 모듈화 앱 실행 방법?
+    * 보통 IDE, 빌드 시스템에서 이들 명령을 자동으로 처리하지만
+    * 이들 명령이 어떤 동작을 수행하는지 확인하는 것은 내부적으로 어떤 일이 일어나는지 이해하는 데 도움이 됨
+    * 모듈 소스 디렉터리에서 다음 명령 실행
+      ```
+      javac module-info.java
+          com/example/expenses/application/ExpensesApplication.java -d target
+      
+      jar cvfe expenses-application.jar
+          com.example.expenses.application.ExpensesApplication -C target
+      ```
+      * 그럼 어떤 폴더와 클래스 파일이 생성된 JAR에 포함되어 있는지를 보여주는 다음과 같은 결과 출력됨
+        * JAR(expenses-application.jar)
+          ```
+          added manifest
+          added module-info: module-info.class adding: com/(in = 0) (out= 0)(stored 0%)
+          added: com/example/(in = 0) (out= 0)(stored 0%)
+          added: com/example/expenses/(in = 0) (out= 0)(stored 0%)
+          added: com/example/expenses/application(in = 0) (out= 0)(stored 0%)
+          added: com/example/expenses/application/ExpensesApplication.class(in = 456) (out= 306)(deflated 32%)
+          ```
+        * 마지막으로 생성된 JAR를 모듈화 앱으로 실행
+          ```
+          java --module-path expenses-application.jar \ 
+               --module expenses/com.example.expenses.application.ExpensesApplication
+          ```
+      * 처음 두 과정은 자바 앱을 JAR로 패키징하는 표준 방법
+        * 새로운 부분은 컴파일 과정에 새로 추가된 module-info.java
+  * java 프로그램으로 자바.class 파일을 실행할 때 다음과 같은 두가지 옵션이 새로 추가됨
+    * --module-path
+      * 어떤 모듈을 로드할 수 있는지 지정함
+      * 이 옵션은 클래스 파일을 지정하는 --classpath 인수와는 다름
+    * --module
+      * 이 옵션은 실행할 메인 모듈과 클래스를 지정함
+  * 모듈 정의는 버전 문자열을 포함하지 않음
+    * 자바 9 모듈 시스템에서는 버전 선택 문제를 크게 고려하지 않았음
+    * 따라서 버전 기능은 지원하지 않음
+    * 대신 버전 문제는 빌드 도구나 컨테이너 앱에서 해결해야 할 문제로 넘김
+
+### 여러 모듈 활용하기
+* 비용 앱이 소스에서 비용을 읽을 수 있어야 함
+* 이 기능을 캡슐화한 expenses.readers라는 새 모듈을 만들 것
+* expenses.application, expenses.readers 두 모듈간의 상호 작용은 자바 9에서 지정한 export, requires를 이용해 이루어짐
+
+* exports 구문
+  * expenses.readers 모듈 선언
+    ```
+    module expenses.readers {
+        // 이들은 모듈명이 아니라 패키지명
+        export com.example.expenses.readers;
+        export com.example.expenses.readers.file;
+        export com.example.expenses.readers.http;
+    }
+    ```
+  * exports는 다른 모듈에서 사용할 수 있도록 특정 패키지를 공개 형식으로 만듦
+  * 기본적으로 모듈 내의 모든 것은 캡슐화됨
+    * 모둘 시스템은 화이트 리스트 기법을 이용해 강력한 캡슐화를 제공하므로 다른 모듈에서 사용할 수 있는 기능이 무엇인지 명시적으로 결정해야 함
+      * 이 접근법은 실수로 어떤 기능을 외부로 노출함으로 몇 년이 지난 뒤에 해커가 시스템을 남용할 여지를 방지함
+  * 프로젝트의 두 모듈 디렉터리 구조
+    * expenses.application
+      * |-- expenses.application
+        * |-- module-info.java
+        * |-- com
+          * |-- example
+            * |-- expenses
+              * |-- application
+                * |-- ExpensesApplication.java
+    * expenses.readers
+      * |-- expenses.readers
+        * |-- module-info.java
+        * |-- com
+          * |-- example
+            * |-- expenses
+              * |-- readers
+                * |-- Reader.java
+              * |-- file
+                * |-- FileReader.java
+              * |-- HttpReader.java
+
+* requires 구문
+  * 또는 다음처럼 module-info.java를 구현
+    ```
+    module expenses.readers {
+        requires java.base; // 패키지명이 아니라 모듈명
+    
+        // 이들은 모듈명이 아니라 패키지명
+        exports com.example.expenses.readers;
+        exports com.example.expenses.readers.file;
+        exports com.example.expenses.readers.http;
+    }
+    ```
+  * requires는 의존하고 있는 모듈을 지정함
+    * 기본적으로 모든 모듈은 java.base라는 플랫폼 모듈에 의존함
+    * 이 플랫폼 모듈은 net, io, util 등의 자바 메인 패키지를 포함함
+    * 항상 기본적으로 필요한 모듈이기 때문에 명시적으로 정의할 필요가 없음
+    * 자바에서 "class Foo extends Object {...}"처럼 하지 않고 "class Foo {...}"처럼 클래스를 정의하는 것과 같은 원리
+    * 따라서 java.base 외의 모듈을 임포트할 때 requires를 사용함
+  * 자바 9에서는 requires와 exports 구문을 이용해 더 정교하게 클래스 접근을 제어할 수 있음
+    * 자바 9 이전과 이후의 접근자와 가시성 변화를 표여주는 표
+    * 자바 9에서는 클래스 가시성을 더 잘 제어할 수 있는 기능을 제공
+
+     |      클래스 가시성      | 자바 9 이전 | 자바 9 이후 |           기타            |
+     |---------------------|----------|-----------|--------------------------|
+     | 모든 클래스가 모두에 공개됨 |    OO    |    OO    | exports와 requires 구분 혼합 |
+     | 제한된 클래스만 공개됨     |    XX    |    OO    | exports와 requires 구분 혼합 |
+     | 한 모듈의 내에서만 공개    |    XX    |    O     | export 구문 없음             |
+     | Protected            |    OO    |    OO    |                           |
+     | Package              |    OO    |    OO    |                           |
+     | Private              |    OO    |    OO    |                           |
+
+* 이름 정하기
+  * 오라클은 패키지명처럼 인터넷 도메인명을 역순으로 모듈의 이름을 정하도록 권고함
+    * 예를 들어 com.iteratrlearning.training
+  * 더욱이 모듈명은 노출된 주요 API 패키지와 이름이 같아야 한다는 규칙을 따라야 함
+  * 모듈명은 작성자의 인터넷 도메인명을 역순으로 시작해야 함
+    * 모듈이 패키지를 포함하지 않거나 어떤 다른 이유로 노출된 패키지 중 하나와 이름이 일치하지 않는 상황을 제외
+
+### 컴파일과 패키징
+* 메이븐 빌드 도구를 이용해 프로젝트 컴파일한다고 가정
+* 먼저 각 모듈에 pom.xml을 추가
+* 사실 각 모듈은 독립적으로 컴파일되므로 자체적으로 각각이 한 개의 프로젝트
+* 전체 프로젝트 빌드를 조정할 수 있도록 모든 모듈의 부모 모듈에도 pom.xml을 추가함
+* 전체 구조
+  * |-- pom.xml
+  * |-- expenses.application
+    * |-- pom.xml
+    * |-- src
+      * |-- main
+        * |-- java
+          * |-- module-info.java
+          * |-- com
+            * |-- example
+              * |-- expenses
+                * |-- application
+                  * |-- ExpensesApplication.java
+  * |-- expenses.readers
+    * |-- pom.xml
+    * |-- src
+      * |-- main
+        * |-- java
+          * |-- module-info.java
+          * |-- com
+            * |-- example
+              * |-- expenses
+                * |-- readers
+                  * |-- Reader.java
+                * |-- file
+                  * |-- FileReader.java
+                * |-- http
+                  * |-- HttpReader.java
+* 이렇게 세 개의 pom.xml 파일을 추가해 메이븐 디렉터리 구조를 완성
+  * 모듈 디스크립터(module-info.java)는 src/main/java 디렉터리에 위치해야함
+  * 올바른 모듈 소스 경로를 이용하도록 메이븐이 javac를 설정
+  * 다음은 expenses.readers 모듈 pom.xml
+    ```
+    <?xml version="1.0" encoding="UTF-8"?>
+    <project xmlns="http://maven.apache.org/POM/4.0.0"
+             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+             xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    
+        <modelVersion>4.0.0</modelVersion>
+    
+        <groupId>com.example</groupId>
+        <artifactId>expenses.readers</artifactId>
+        <version>1.0</version>
+        <packaging>jar</packaging>
+        <parent>
+            <groupId>com.example</groupId>
+            <artifactId>expenses</artifactId>
+            <version>1.0</version>
+        </parent>
+    </project>
+    ```
+    * 순조롭게 빌드될 수 있도록 명시적으로 부모 모듈을 지정한 코드
+    * 부모 ID expenses를 포함하는 부산물(artifact)
+    * pom.xml에 부모를 정의해야 함
+  * 다음은 expenses.application 모듈 pom.xml
+    ```
+    <?xml version="1.0" encoding="UTF-8"?>
+    <project xmlns="http://maven.apache.org/POM/4.0.0"
+             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+             xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    
+        <modelVersion>4.0.0</modelVersion>
+    
+        <groupId>com.example</groupId>
+        <artifactId>expenses.application</artifactId>
+        <version>1.0</version>
+        <packaging>jar</packaging>
+    
+        <parent>
+            <groupId>com.example</groupId>
+            <artifactId>expenses</artifactId>
+            <version>1.0</version>
+        </parent>
+    
+        <dependencies>
+            <dependency>
+                <groupId>com.example</groupId>
+                <artifactId>expenses.readers</artifactId>
+                <version>1.0</version>
+            </dependency>
+        </dependencies>
+    
+    </project>
+    ```
+  * 다음은 모듈 expenses.readers와 expenses.application를 참조하도록 완성한 pom.xml
+    * 메이븐은 특별한 xml요소 \<module>을 가진 여러 메이븐 모듈을 가진 프로젝트를 지원함
+      * \<module> : 자식의 부산물 ID를 참조
+    ```
+    <?xml version="1.0" encoding="UTF-8"?>
+    <project xmlns="http://maven.apache.org/POM/4.0.0"
+             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+             xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    
+        <modelVersion>4.0.0</modelVersion>
+    
+        <groupId>com.example</groupId>
+        <artifactId>expenses.application</artifactId>
+        <packaging>pom</packaging>
+        <version>1.0</version>
+    
+        <modules>
+            <module>expenses.application</module>
+            <module>expenses.readers</module>
+        </modules>
+    
+        <build>
+            <pluginManagement>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.7.0</version>
+                        <configuration>
+                            <source>9</source>
+                            <target>9</target>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </pluginManagement>
+        </build>
+        
+    </project>
+    ```
+  * ``` mvn clean package ``` 명령을 실행해 프로젝트의 모듈을 JAR로 만들 수 있음
+    * 다음과 같은 부산물이 만들어짐
+      ``` ./expenses.application/target/expenses.application-1.0.jar ```
+      ``` ./expenses.readers/target/expenses.readers-1.0.jar ```
+    * 두 JAR를 다음처럼 모듈 경로에 포함해서 모듈 앱을 실행할 수 있음
+      ```
+      java --module-path \
+      ./expenses.application/target/expenses.application-1.0.jar:\
+      ./expenses.readers/target/expenses.readers-1.0.jar \
+        --module \
+       expenses.application/com.example.expenses.application.ExpensesApplication
+      ```
+
+### 자동 모듈
+* HttpReader를 저수준으로 구현하지 않고 아파치 프로젝트의 httpclient 같은 특화 라이브러리를 사용해 구현한다고 가정
+  * requires 구문 이용
+    * expenses.readers 프로젝트의 module-info.java에 구문 추가
+    * ``` mvn clean package ``` 다시 실행
+    * ``` [ERROR] module not found: httpclient ```
+    * 의존성을 기술하도록 pom.xml도 갱신해야 하므로 에러가 발생함
+    * 메이븐 컴파일러 플러그인은 module-info.java를 포함하는 프로젝트를 빌드할 때  
+      모든 의존성 모듈을 경로에 놓아 적절한 JAR를 내려받고 이들이 프로젝트에 인식되도록 함
+    * 다음과 같은 의존성 필요
+      ```
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+          <version>4.5.3</version>
+      </dependency>
+      ```
+    * ``` mvn clean package ``` 다시 실행하면 프로젝트가 올바르게 빌드됨
+    * 하지만 httpclient는 자바 모듈이 아님
+      * httpclient는 자바 모듈로 사용하려는 외부 라이브러리, 모듈화가 되어 있지 않은 않음
+    * 자바는 JAR를 자동 모듈이라는 형태로 적절하게 변환함
+    * 모듈 경로상에 있으나 module-info 파일을 가지지 않은 모든 JAR는 자동 모듈이 됨
+    * 자동 모듈은 암묵적으로 자신의 모든 패키지를 노출시킴
+    * 자동 모듈의 이름은 JAR 이름을 이용하여 정해짐
+    * jar 도구의 --describe-module 인수를 이용해 자동으로 정해지는 이름을 바꿀 수 있음
+      ```
+      jar --file=./expenses.readers/target/dependency/httpclient-4.5.3.jar \
+          --describe-module httpclient@4.5.3 automatic
+      ```
+      * 그러면 httpclient라는 이름으로 정의됨
+    * 마지막으로 httpclientJAR를 모듈 경로에 추가한 다음 앱을 실행함
+      ```
+      java --module-path \
+      ./expenses.application/target/expenses.application-1.0.jar:\
+      ./expenses.readers/target/expenses.readers-1.0.jar \
+      ./expenses.readers/target/dependency/httpclient-4.5.3.jar \
+        --module \
+       expenses.application/com.example.expenses.application.ExpensesApplication
+      ```
+  * 메이븐에는 자바 9 모듈 시스템을 더 잘 지원하는 프로젝트가 있음
+    * https://github.com/moditect/moditect
+    * module-info 파일을 자동으로 생성함
+
+### 모듈 정의와 구문들
+* 간단한 몇 가지 키워드
+  * module 지시어
+    * com.iteratrlearning.training 모듈명 예제
+      ```
+      module com.iteratrlearning.training {
+      }
+      ```
+
+* requires
+  * 컴파일 타임과 런타임에 한 모듈이 다른 모듈에 의존함을 정의
+  * 예를 들어 com.iteratrlearning.application은 com.iteratrlearning.ui 모듈에 의존함
+    ```
+    module com.iteratrlearning.application {
+        requires com.iteratrlearning.ui;
+    }
+    ```
+  * 그러면 com.iteratrlearning.ui에서 외부로 노출한 공개 형식을 com.iteratrlearning.application에서 사용 가능
+
+* exports
+  * 지정한 패키지를 다른 모듈에서 이용할 수 있또록 공개 형식으로 만듦
+  * 아무 패키지도 공개하지 않는 것이 기본 설정
+  * 어떤 패키지를 공개할 것인지를 명시적으로 지정함으로 캡슐화를 높일 수 있음
+  * com.iteratrlearning.ui.panels와 com.iteratrlearning.ui.widgets 공개 예제
+    * 참고로 문법이 비슷함에도 불구하고 exports는 패키지명을 인수로 받지만 requires는 모듈명일 인수로 받는다는 사실 주의
+    ```
+    module com.iteratrlearning.ui {
+        requires com.iteratrlearning.core;
+        exports com.iteratrlearning.ui.panels;
+        exports com.iteratrlearning.ui.widgets;
+    }
+    ```
+
+* requires transitive
+  * 다른 모듈이 제공하는 공개 형식을 한 모듈에서 사용할 수 있다고 지정 가능
+  * 예를 들어 exports com.iteratrlearning.ui 모듈 정의에서 requires를 requires-transitive로 바꿀 수 있음
+    ```
+    module com.iteratrlearning.ui {
+        requires transitive com.iteratrlearning.core;
+    
+        exports com.iteratrlearning.ui.panels;
+        exports com.iteratrlearning.ui.widgets;
+    }
+    
+    module com.iteratrlearning.application {
+        requires com.iteratrlearning.ui;
+    }
+    ```
+    * 결과적으로 com.iteratrlearning.application 모듈은 com.iteratrlearning.core에서 노출한 공개 형식에 접근할 수 있음
+    * 필요로 하는 모듈(com.iteratrlearning.ui)이 다른 모듈(com.iteratrlearning.core)의 형식을 반환하는 상황에서  
+      전이성(transitivity) 선언을 유용하게 사용할 수 있음
+    * com.iteratrlearning.application 모듈 내부에 com.iteratrlearning.core 모듈을 다시 선언하는 것은 성가신 일
+    * 따라서 이런 상황에서는 transitive를 이용하여 문제 해결
+    * com.iteratrlearning.io 모듈에 의존하는 모든 모듈은 자동으로 com.iteratrlearning.core 모듈을 읽을 수 있게 됨
+
+* exports to
+  * 사용자에게 공개할 기능을 제한함으로 가시성을 좀 더 정교하게 제어할 수 있음
+  * com.iteratrlearning.ui.widghtes의 접근 권한을 가진 사용자의 권한을 com.iteratrlearning.ui.widgetuser로 제한 가능
+    ```
+    module com.iteratrlearning.ui {
+        requires com.iteratrlearning.core;
+    
+        exports com.iteratrlearning.ui.panels;
+        exports com.iteratrlearning.ui.widgets to com.iteratrlearning.uiwidgetuser;
+    }
+    ```
+
+* open과 opens
+  * 모든 패키지를 다른 모듈에 반사적으로 접근을 허용할 수 있음
+  * 반사적인 접근 권한을 주는 것 이외에 open 한정자는 모듈의 가시성에 다른 영향을 미치지 않음
+    ```
+    open com.iteratrlearning.ui {
+    }
+    ```
+  * 자바 9 이전에는 리플렉션으로 객체의 비공개 상태 확인 가능했음
+  * 즉 진정한 캡슐화는 존재하지 않았음
+  * 하이버네이트(Hibernate) 같은 객체 관계 매핑(Object-relational mapping : ORM) 도구에서는 이런 기능을 이용해 상태를 직접 고치곤 함
+  * 자바 9에서는 기본적으로 리플렉션이 이런 기능을 허용하지 않음
+  * 이런 기능 필요시 open 구문을 명시적으로 사용해야 함
+  * 리플렉션 때문에 전체 모듈을 개방하지 않고도 opens 구문을 모듈 선언에 이용해 필요한 개별 패키지만 개방할 수 있음
+  * exports-to로 노출한 패키지를 사용할 수 있는 모듈을 한정했던 것처럼, open에 to를 붙여서 반사적인 접근을 특정 모듈에만 허용할 수 있음
+
+* uses와 provides
+  * provies 구문으로 서비스 제공자를, uses 구문으로 서비스 소비자를 지정할 수 있는 기능 제공
+  * 서비스와 ServiceLoader를 안다면 친숙한 내용
+  * 고급 주제
+
+### 더 큰 예제 그리고 더 배울 수 있는 방법
+* 오라클 자바 문서에 가져온 예제
+  ```
+  module com.example.foo {
+      requires com.example.foo.http;
+      requires java.logging;
+      requires transitive com.example.foo.network;
+  
+      exports com.example.foo.bar;
+      exports com.example.foo.internal to com.example.foo.probes;
+  
+      opens com.example.foo.quux;
+      opens com.example.foo.internal to com.example.foo.network, com.example.foo.probe;
+  
+      uses com.example.foo.spi.Intf;
+      provides com.example.foo.spi.Intf with com.example.foo.Impl;
+  }
+  ```
+* 앱을 자바 9로 이전할 때 EE와 관련한 여러 패키지가 모듈화된 자바 9 가상 머신에서 기본적으로 로드되지 않음
+  * 예를 들어 JAXB API 클래스는 이제 자바 EE API로 간주되므로 자바 SE 9의 기본 클래스 경로에 더는 포함되지 않음
+  * 따라서 호환성을 유지하려면 ``` --add-modules ``` 명령행을 이용해 명시적으로 필요한 모듈을 추가해야 함
+  * 예를 들어 java.xml.bind가 필요하면 ``` --add-modules java.xml.bind ``` 지정해야 함
+
+### 정리
+* 관심사분리와 정보 은닉은 추론하기 쉬운 소프트웨어를 만드는 중요한 두 가지 원칙
+* 자바 9 이전에는 각각의 기능을 담당하는 패키지, 클래스, 인터페이스로 모듈화를 구현했는데 효과적인 캡슐화를 달성하기엔 역부족
+* 클래스 경로 지옥 문제는 앱의 의존성을 추론하기 더욱 어렵게 만듦
+* 자바 9 이전의 JDK는 거대했으며 높은 유지 비용과 진화를 방해하는 문제가 존재했음
+* 자바 9에서는 새로운 모듈 시스템 제공, module-info.java 파일의 모듈의 이름을 지정하며 필요한 의존성(requires)과 공개 API(exports)를 정의함
+* requires 구문으로 필요한 다른 모듈을 정의할 수 있음
+* exports 구문으로 특정 패키지를 다른 모듈에서 사용할 수 있는 공개 형식으로 지정할 수 있음
+* 인터넷 도메인명을 역순으로 사용하는 것이 권장 모듈 이름 규칙
+* 모듈 경로에 포함된 JAR 중에 module-info 파일을 포함하지 않는 모든 JAR는 자동 모듈이 됨
+* 자동 모듈은 암묵적으로 모든 패키지를 공개함
+* 메이븐은 자바 9 모듈 시스템으로 구조화된 앱을 지원함
+
+### [quiz]
+---
